# MangaJaNaiUpscaler

./: .gitignore  README.md  ruff.toml  run.sh  setup.sh
.github/workflows/: build.yml
backend/: pyproject.toml
backend/src/: accelerator_detection.py  device_list.py  pyproject.toml  run_upscale.py  test_accelerators.py  test_rocm.py
backend/src/api/: group.py  input.py  iter.py  lazy.py  node_check.py  node_data.py  output.py
backend/src/nodes/: group.py  node_cache.py
backend/src/nodes/impl/: blend.py  image_op.py  image_utils.py  resize.py
backend/src/nodes/impl/color/: convert.py  convert_model.py
backend/src/nodes/impl/onnx/: onnx_to_ncnn.py
backend/src/nodes/impl/pytorch/: auto_split.py  utils.py
backend/src/nodes/impl/pytorch/pix_transform/: auto_split.py  pix_transform_net.py
backend/src/nodes/impl/pytorch/rife/: IFNet_HDv3_v4_14_align.py  warplayer.py
backend/src/nodes/impl/upscale/: auto_split.py  auto_split_tiles.py
backend/src/nodes/properties/inputs/: generic_inputs.py  pytorch_inputs.py
backend/src/nodes/properties/outputs/: numpy_outputs.py
backend/src/nodes/utils/: format.py
backend/src/spandrel_custom/: __init__.py
backend/src/spandrel_custom/architectures/FDAT/: __init__.py
backend/src/spandrel_custom/architectures/FDAT/__arch/: fdat.py
current/backend/: models  src
gui/: .gitignore  index.html  launch_gui.py  package-lock.json  package.json  requirements.txt  run.py
gui/src/: __main__.py  dark_theme.qss  gpu_detection.py  main.ts  main_window.py  models.py  models.ts  styles.css
gui/tests/: ui.test.ts
